Fix thumbnail size and layout gaps

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,7 +67,7 @@ nav {
 
 .wrapper {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 5px;
   grid-template-areas:
     "header"
     "main"
