--- a/src/app/tweet-list/tweet-list.component.scss
+++ b/src/app/tweet-list/tweet-list.component.scss
@@ -18,7 +18,7 @@
   box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
   text-align: center;
 }
-.grid > article > a  img {
+.thumbnail {
   max-width: 100%;
   display: block;
 }
